--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pyinstaller = "^6.4.0"
 pytk = "^0.0.2.1"
 tkcalendar = "^1.6.1"
 pyperclip = "^1.8.2"
+opencv-python = "^4.9.0.80"
 
 
 [build-system]
